--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+	* Changed Misc.help to allow plugins to specify their own help,
+	and added help for several of the more confusing plugins.
+	
 	* Added Dunno.stats, to return the number of dunnos in the
 	database.
 	
