Added aol filter.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+	* Added aol filter in the Filter plugin.
+	
 	* Added Nickometer plugin, a translation of Infobot's Nickometer.
 	
 	* Added multiple recipient support for notes.
