--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+	* Added the ChannelRelay plugin, to relay messages between two
+	channels.  This might be useful for people who want to forward
+	CVS update messages from one channel (such as #commits) to
+	another.
+	
 	* Added Channel.mode, to set modes in the channel, Channel.limit,
 	to set the channel limit, Channel.moderate and
 	Channel.unmoderate, to set +m and -m, respectively, and
@@ -11,9 +16,7 @@
 	no arguments now lists the currently announced feeds.  Removing
 	feeds is done by specifying the --remove option.
 
-	* Added a reconnect command to the Owner plugin.  It won't work
-	for people using asyncoreDrivers, but those people should be few
-	and far between these days.
+	* Added a reconnect command to the Owner plugin.
 	
 	* Added aol and rainbow filters to the Filter plugin.
 	
