--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+	* Added supybot.nick.alternates, which allows a list of alternate
+	nicks to try, in order, if the primary nick (supybot.nick) is
+	taken.  Also added a nick-perturbation function that will change
+	supybot.nick if there are no alternates or if they're all taken
+	as well.  As a result, removed supybot.nickmods.
+	
 	* Changed ChannelLogger to log channels to logs/ChannelLogger,
 	rather than simply logs.
 	
