--- a/README
+++ b/README
@@ -28,7 +28,7 @@ DEVELOPERS:
 -----------
 Read OVERVIEW to see what the modules are used for.  Read EXAMPLE to
 see some examples of callbacks and commands written for the bot.
-Read INTEFACES to see what kinds of objects you'll be dealing with.
+Read INTERFACES to see what kinds of objects you'll be dealing with.
 Read STYLE if you wish to contribute; all contributed code must meet
 the guidelines set forth there..
 
